--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "expo": "^33.0.0",
+    "expo-font": "^5.0.1",
     "galio-framework": "^0.5.3",
     "prop-types": "^15.7.2",
     "react": "16.8.3",
