--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "argon-react-native",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Argon React Native, based on Argon Design System. Coded by Creative Tim",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -14,19 +14,19 @@
     "url": "git+https://github.com/creativetimofficial/argon-react-native.git"
   },
   "dependencies": {
-    "expo": "^34.0.3",
-    "expo-asset": "^6.0.0",
-    "expo-font": "^6.0.1",
-    "galio-framework": "^0.6.1",
+    "expo": "^35.0.0",
+    "expo-asset": "~7.0.0",
+    "expo-font": "~7.0.0",
+    "galio-framework": "^0.6.3",
     "prop-types": "^15.7.2",
     "react": "16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
-    "react-native-gesture-handler": "^1.3.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.3.0",
     "react-native-modal-dropdown": "^0.6.2",
     "react-navigation": "^3.11.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "babel-preset-expo": "^7.0.0"
   },
   "keywords": [
     "argon react native",
