--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/drawer": "5.0.0",
     "@react-navigation/native": "5.0.0",
     "@react-navigation/stack": "5.0.0",
+    "@use-expo/font": "^2.0.0",
     "expo": "^37.0.0",
     "expo-asset": "~8.1.5",
     "expo-font": "~8.1.0",
